feat(logging): add unified logging system across components
Introduce sibyl_core.logging package with themed structured output
for consistent logging across Python services and the Next.js frontend.

- Add SibylRenderer with pipe-separated format and ANSI theming
- Centralize color palette in sibyl_core.logging.colors
- Configure per-service logging (api, worker, web, cli)
- Suppress noisy third-party loggers automatically
- Add TypeScript logger matching Python output format
- Migrate all components to use centralized colors

Also adds create_learning_episode background job for async
episode creation from completed tasks.

--- a/apps/e2e/pyproject.toml
+++ b/apps/e2e/pyproject.toml
@@ -31,6 +31,8 @@ dev = [
     "pytest-asyncio>=0.24",
     # Browser automation (optional, install with: uv sync --extra browser)
     "playwright>=1.40",
+    # Linting
+    "ruff>=0.8",
 ]
 
 # =============================================================================
