--- a/.moon/workspace.yml
+++ b/.moon/workspace.yml
@@ -7,6 +7,7 @@ projects:
   cli: "apps/cli"
   e2e: "apps/e2e"
   web: "apps/web"
+  docs: "docs"
   # Shared packages
   core: "packages/python/sibyl-core"
   # Tools
