--- a/.moon/workspace.yml
+++ b/.moon/workspace.yml
@@ -1,6 +1,10 @@
 # https://moonrepo.dev/docs/config/workspace
 $schema: "./cache/schemas/workspace.json"
 
+vcs:
+  manager: git
+  defaultBranch: main
+
 projects:
   root: "."
   api: "apps/api"
