docs: add agent harness vision and standardize markdown formatting
Add comprehensive design document for the Agent Harness feature covering
multi-agent orchestration, git worktree strategy, human-in-the-loop
approvals, session persistence, and web UI integration.

Standardize markdown formatting across all documentation:
- Align table columns consistently
- Wrap long lines at ~100 characters
- Add missing blank lines before code blocks
- Fix inconsistent spacing in lists

--- a/skills/moon.yml
+++ b/skills/moon.yml
@@ -12,7 +12,10 @@ fileGroups:
 
 tasks:
   install:
-    command: "echo 'Installing Sibyl skill...' && mkdir -p ~/.claude/skills ~/.codex/skills && rm -rf ~/.claude/skills/sibyl ~/.codex/skills/sibyl && cp -r sibyl ~/.claude/skills/ && cp -r sibyl ~/.codex/skills/ && echo '✓ Installed to ~/.claude/skills and ~/.codex/skills'"
+    command:
+      "echo 'Installing Sibyl skill...' && mkdir -p ~/.claude/skills ~/.codex/skills && rm -rf
+      ~/.claude/skills/sibyl ~/.codex/skills/sibyl && cp -r sibyl ~/.claude/skills/ && cp -r sibyl
+      ~/.codex/skills/ && echo '✓ Installed to ~/.claude/skills and ~/.codex/skills'"
     local: true
     options:
       shell: true
