feat(agents): add dashboard with health monitoring and approvals
Implement agent observability dashboard with real-time monitoring:

- Add heartbeat endpoint for agent liveness tracking with
  configurable stale/unresponsive thresholds (60s/300s)
- Add health overview endpoint aggregating agent status
- Add activity feed endpoint for cross-agent event timeline
- Add approvals REST API with list, pending, get, and respond
  endpoints for human-in-the-loop coordination
- Add HealthMonitor component with live heartbeat indicators
- Add ActivityFeed component showing agent events chronologically
- Add ApprovalQueue component with approve/deny/edit actions
- Update agents page with dashboard/list view toggle and grid
  layout integrating new monitoring components
- Add React Query hooks with polling for approvals, activity,
  and health data with WebSocket subscription support

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -34,6 +34,7 @@
     "@tanstack/react-query": "^5.90.12",
     "cmdk": "^1.1.1",
     "d3-force": "^3.0.0",
+    "date-fns": "^4.1.0",
     "iconoir-react": "^7.11.0",
     "lucide-react": "^0.562.0",
     "motion": "^12.23.26",
