build(moon): centralize python venv sync as task dependency
Add root:sync task that creates venv if missing and syncs dependencies.
All Python lint, test, and typecheck tasks now depend on root:sync to
ensure the environment is ready before execution.

Configure Moon to:
- Only auto-install Node dependencies in pipeline
- Use workspace root venv only (rootVenvOnly: true)
- Enable caching for sync tasks by removing local: true flag

--- a/.moon/toolchain.yml
+++ b/.moon/toolchain.yml
@@ -13,3 +13,5 @@ node:
 python:
   version: "3.13"
   packageManager: uv
+  # Only create venv at workspace root, not per-package
+  rootVenvOnly: true
