--- a/apps/cli/moon.yml
+++ b/apps/cli/moon.yml
@@ -26,6 +26,8 @@ tasks:
 
   lint:
     command: "uv run ruff check src/"
+    deps:
+      - "root:sync"
     inputs:
       - "@group(sources)"
 
@@ -48,11 +50,15 @@ tasks:
 
   typecheck:
     command: "uv run pyright src/"
+    deps:
+      - "root:sync"
     inputs:
       - "@group(sources)"
 
   test:
     command: "uv run pytest tests/ -v"
+    deps:
+      - "root:sync"
     inputs:
       - "@group(sources)"
       - "@group(tests)"
