--- a/apps/e2e/moon.yml
+++ b/apps/e2e/moon.yml
@@ -22,6 +22,8 @@ tasks:
   # Run all e2e tests
   test:
     command: "uv run pytest"
+    deps:
+      - "root:sync"
     inputs:
       - "@group(tests)"
     local: true
@@ -50,11 +52,12 @@ tasks:
     command: "uv sync"
     inputs:
       - "@group(configs)"
-    local: true
 
   # Lint test code
   lint:
     command: "uv run ruff check tests"
+    deps:
+      - "root:sync"
     inputs:
       - "@group(tests)"
 
