feat(crawler): strip navigation cruft from crawled docs
Add regex-based cleaning to remove common documentation site
navigation elements that pollute crawled content:

- Skip to content links (Docusaurus pattern)
- "On this page" sidebar headers
- Breadcrumb navigation paths
- Previous/Next page links
- Edit this page and issue report links
- Table of contents markers

Applied during both full-page and section-based document processing.

Also update moon toolchain configuration:
- Use rootRequirementsOnly instead of deprecated rootVenvOnly
- Relax moon version constraint to ~1 for minor updates
- Format dev command as single line

--- a/.moon/toolchain.yml
+++ b/.moon/toolchain.yml
@@ -12,6 +12,5 @@ node:
 
 python:
   version: "3.13"
-  packageManager: uv
-  # Only create venv at workspace root, not per-package
-  rootVenvOnly: true
+  # Only sync deps from workspace root, not per-package
+  rootRequirementsOnly: true
