feat(config): add multi-instance support with configurable ports
Enable running multiple Sibyl instances on the same machine by making
all service ports configurable via environment variables.

New env vars:
- SIBYL_WEB_PORT (default 3337) - web frontend port
- SIBYL_FALKORDB_BROWSER_PORT (default 3335) - FalkorDB UI port
- COMPOSE_PROJECT_NAME - isolates containers and volumes

Updated:
- docker-compose.yml: All ports now use env var substitution
- apps/web/package.json: dev/start use $SIBYL_WEB_PORT
- .env.example: Document all port variables
- .env.test.example: Example config for secondary instance (+10 offset)
- docs/deployment/environment.md: Add "Running Multiple Instances" section

Usage:
  docker compose -p sibyl-test --env-file .env.test up -d
  SIBYL_SERVER_PORT=3344 sibyld serve
  SIBYL_WEB_PORT=3347 pnpm -C apps/web dev

--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,18 @@
 #   docker compose -f docker-compose.prod.yml up -d
 #   # Visit http://localhost:3337
 
+# -----------------------------------------------------------------------------
+# Port Configuration
+# -----------------------------------------------------------------------------
+# All ports are configurable for running multiple instances
+SIBYL_SERVER_PORT=3334
+SIBYL_WEB_PORT=3337
+SIBYL_FALKORDB_PORT=6380
+SIBYL_FALKORDB_BROWSER_PORT=3335
+SIBYL_POSTGRES_PORT=5433
+
 # FalkorDB Configuration
 SIBYL_FALKORDB_HOST=localhost
-SIBYL_FALKORDB_PORT=6380
 SIBYL_FALKORDB_PASSWORD=conventions
 SIBYL_FALKORDB_GRAPH_NAME=conventions
 
