--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,24 @@
+# Sibyl Development Database Services
+#
+# To run multiple instances, use different project names and ports:
+#   COMPOSE_PROJECT_NAME=sibyl-test SIBYL_FALKORDB_PORT=6390 SIBYL_POSTGRES_PORT=5443 docker compose up -d
+#
+# Or use a separate env file:
+#   docker compose --env-file .env.test up -d
+
 services:
   falkordb:
     image: falkordb/falkordb:latest
-    container_name: sibyl-falkordb
+    container_name: ${COMPOSE_PROJECT_NAME:-sibyl}-falkordb
     ports:
-      - "6380:6379" # Redis port (mapped to 6380 to avoid gradial-redis conflict)
-      - "3335:3000" # FalkorDB Browser UI
+      - "${SIBYL_FALKORDB_PORT:-6380}:6379"
+      - "${SIBYL_FALKORDB_BROWSER_PORT:-3335}:3000"
     volumes:
       - falkordb_data:/data
     environment:
-      - FALKORDB_ARGS=--requirepass ${FALKORDB_PASSWORD:-conventions}
+      - FALKORDB_ARGS=--requirepass ${SIBYL_FALKORDB_PASSWORD:-conventions}
     healthcheck:
-      test: ["CMD", "redis-cli", "-a", "${FALKORDB_PASSWORD:-conventions}", "ping"]
+      test: ["CMD", "redis-cli", "-a", "${SIBYL_FALKORDB_PASSWORD:-conventions}", "ping"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -18,11 +26,11 @@ services:
 
   postgres:
     image: pgvector/pgvector:pg18
-    container_name: sibyl-postgres
+    container_name: ${COMPOSE_PROJECT_NAME:-sibyl}-postgres
     ports:
-      - "5433:5432" # Mapped to 5433 to avoid conflicts
+      - "${SIBYL_POSTGRES_PORT:-5433}:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql # pg18+ uses subdirectory structure
+      - postgres_data:/var/lib/postgresql
     environment:
       POSTGRES_USER: ${SIBYL_POSTGRES_USER:-sibyl}
       POSTGRES_PASSWORD: ${SIBYL_POSTGRES_PASSWORD:-sibyl_dev}
