--- a/moon.yml
+++ b/moon.yml
@@ -78,9 +78,9 @@ tasks:
       docker compose -f docker-compose.quickstart.yml --env-file .env.quickstart up -d
       echo ""
       echo "🚀 Sibyl quickstart running!"
-      echo "   Web UI:   http://localhost:3337"
-      echo "   API:      http://localhost:3334"
-      echo "   Graph UI: http://localhost:3335"
+      echo "   Web UI:   http://localhost:${SIBYL_WEB_PORT:-3337}"
+      echo "   API:      http://localhost:${SIBYL_SERVER_PORT:-3334}"
+      echo "   Graph UI: http://localhost:${SIBYL_FALKORDB_BROWSER_PORT:-3335}"
     local: true
     options:
       shell: true
