style: format moon.yml and agent test suite docs
Reformat YAML command strings to multi-line style in moon.yml for
quickstart test tasks.

Standardize quote style in AGENT_TEST_SUITE.md by converting single
quotes to double quotes in workflow examples and adding blank lines
before code blocks for consistent markdown formatting.

--- a/moon.yml
+++ b/moon.yml
@@ -113,11 +113,13 @@ tasks:
       shell: true
 
   quickstart-test-stop:
-    command: "docker compose -f docker-compose.quickstart.yml -f docker-compose.quickstart.test.yml down"
+    command:
+      "docker compose -f docker-compose.quickstart.yml -f docker-compose.quickstart.test.yml down"
     local: true
 
   quickstart-test-logs:
-    command: "docker compose -f docker-compose.quickstart.yml -f docker-compose.quickstart.test.yml logs -f"
+    command:
+      "docker compose -f docker-compose.quickstart.yml -f docker-compose.quickstart.test.yml logs -f"
     local: true
     options:
       persistent: true
