chore(build): simplify sync task by removing redundant venv step
uv sync already handles venv creation internally, making the explicit
uv venv --allow-existing call and its input tracking unnecessary.

--- a/moon.yml
+++ b/moon.yml
@@ -179,9 +179,6 @@ tasks:
   # ==========================================================================
   sync:
     # Create venv if missing/corrupt, then sync
-    command: "uv venv --allow-existing && uv sync"
-    inputs:
-      - "pyproject.toml"
-      - "uv.lock"
+    command: "uv sync"
     options:
       shell: true
