fix(config): add server-side API URL for Next.js SSR
Add SIBYL_API_URL environment variable to docker-compose configurations
to support server-side rendering. Next.js SSR components need to fetch
from the internal docker network (http://api:3334) while client-side
code uses the public URL (http://localhost:3334).

This resolves SSR fetch failures that occur when NEXT_PUBLIC_API_URL
is used for both server and client contexts.

--- a/docker-compose.quickstart.test.yml
+++ b/docker-compose.quickstart.test.yml
@@ -23,6 +23,7 @@ services:
     ports:
       - "3347:3337"
     environment:
+      SIBYL_API_URL: http://api:3334
       NEXT_PUBLIC_API_URL: http://localhost:3344
 
   falkordb:
