--- a/docker-compose.quickstart.yml
+++ b/docker-compose.quickstart.yml
@@ -109,7 +109,8 @@ services:
       api:
         condition: service_healthy
     environment:
-      NEXT_PUBLIC_API_URL: http://localhost:${SIBYL_SERVER_PORT:-3334}
+      SIBYL_API_URL: http://api:3334  # Server-side (SSR) fetches
+      NEXT_PUBLIC_API_URL: http://localhost:${SIBYL_SERVER_PORT:-3334}  # Client-side (browser) fetches
       NODE_ENV: production
     healthcheck:
       test: ["CMD", "wget", "-q", "--spider", "http://localhost:3337/"]
